# RealEstateBot

./: .env.dist  Dockerfile  README.md  config.py  main.py  misc.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
bot/Middlewares/: middlewares.py
bot/databases/: database.py
bot/decorators/: handle_only_admin.py
bot/filters/: filters.py
bot/handlers/add_ads/: callbacks.py  states.py
bot/handlers/admin_panel/: callbacks.py  states.py
bot/handlers/commands/: main.py
bot/handlers/favorites/: callbacks.py
bot/handlers/main/: callbacks.py  messages.py
bot/handlers/search_setting/: callbacks.py
bot/handlers/start_search/: callbacks.py
bot/keyboards/: add_ad.py  admin_panel.py  main.py  setting_search.py  start_search.py  utils.py
bot/states/: states.py
bot/texts/: lexicon_en.py  lexicon_ru.py  lexicon_tr.py  texts.py
bot/utils/: exchange_rate.py  setup_all_routers.py  utils.py
docker/: .gitignore  docker-compose.yml
docker/postgres_config/: pg_hba.conf  postgresql.conf
generator_data/: generate_realties.py
ml/notebooks/: research_house_price_dataset.ipynb
