[project]
name = "RealEstateBot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
"aiogram~=3.3.0",
"peewee~=3.16.0",
"pycbrf~=1.1.0",
"requests~=2.32.4",
"psycopg2~=2.9.10",
"dotenv~=0.9.9",
"python-dotenv~=1.1.0",
"psycopg2-binary~=2.9.10",
"pytest~=8.4.1",
"pytest-asyncio~=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"